tests/files/type_checker_tests/should_pass/037.cmdr
//Test index lvalues type check
x = [1, 2, 3];
x[2] = 0;
