tests/files/type_checker_tests/should_fail/083.cmdr
//Should fail if array contains multiple types
x = [1, 3];
x[1] = 2.3;
